# AVBK

./: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  colour.cpp  colour.hpp  graph_colouring.hpp  kernel.cpp  kernel.h  kernel_ompss.cpp  kernel_ompss.h  line_detect.hpp  main.cpp  ompss_main.cpp
cmake/: FindMETIS.cmake  FindOmpSs.cmake
test/: gen_mesh.in  my_mesh.mesh.h5
